parser/sample_tests/ours/incrdecr.txt

*** Error line 5.
void main() {
         ^
*** syntax error

